Fix somes bug